--- a/application/index/view/install/index.html
+++ b/application/index/view/install/index.html
@@ -112,7 +112,7 @@
       </div>
       <div class="mdui-textfield">
         <label class="mdui-textfield-label">数据库密码</label>
-        <input class="mdui-textfield-input" type="password" name="password" placeholder="数据库密码" value="root" autocomplete="off"/>
+        <input class="mdui-textfield-input" type="password" name="password" placeholder="数据库密码" autocomplete="off"/>
       </div>
       <div class="mdui-textfield">
         <label class="mdui-textfield-label">数据库连接端口</label>
