--- a/application/index/view/install/index.html
+++ b/application/index/view/install/index.html
@@ -52,10 +52,10 @@
       </tr>
       <tr>
         <td align="right">
-          Curl拓展：
+          finfo拓展：
         </td>
         <td align="left">
-          {if ($isCurl) }
+          {if ($isFinfo) }
           <i class="mdui-icon material-icons mdui-text-color-green">&#xe86c;</i>
           {else/}
           <i class="mdui-icon material-icons mdui-text-color-red">&#xe5c9;</i>
