--- a/application/index/view/install/index.html
+++ b/application/index/view/install/index.html
@@ -52,10 +52,10 @@
       </tr>
       <tr>
         <td align="right">
-          finfo拓展：
+          fileInfo拓展：
         </td>
         <td align="left">
-          {if ($isFinfo) }
+          {if ($isFileInfo) }
           <i class="mdui-icon material-icons mdui-text-color-green">&#xe86c;</i>
           {else/}
           <i class="mdui-icon material-icons mdui-text-color-red">&#xe5c9;</i>
@@ -64,7 +64,7 @@
       </tr>
       <tr>
         <td align="right">
-          Zip拓展：
+          zip拓展：
         </td>
         <td align="left">
           {if ($isZip) }
@@ -76,7 +76,7 @@
       </tr>
       <tr>
         <td align="right">
-          Mysqli：
+          mysqli：
         </td>
         <td align="left">
           {if ($isMysqli) }
