--- a/application/index/view/admin/images/index.html
+++ b/application/index/view/admin/images/index.html
@@ -43,7 +43,7 @@
         {foreach $images as $key => $value}
         <tr data-id="{$value.id}">
           <td>{$value.username}</td>
-          <td>{$value.strategy}</td>
+          <td>{$value.strategyStr}</td>
           <td>{$value.pathname}</td>
           <td class="mdui-text-color-light-blue">{$value.size|format_size}</td>
           <td>{$value.mime}</td>
