--- a/application/index/view/common/base.html
+++ b/application/index/view/common/base.html
@@ -39,12 +39,12 @@
     </ul>
     {/if}
     <!-- More -->
-    <span mdui-menu="{target: '#more'}" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">&#xe5d4;</i></span>
+    <!--<span mdui-menu="{target: '#more'}" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">&#xe5d4;</i></span>
     <ul class="mdui-menu" id="more">
       <li class="mdui-menu-item">
         <a href="https://www.wispx.cn" target="_blank" class="mdui-ripple">熊二哈的猫窝</a>
       </li>
-    </ul>
+    </ul>-->
   </div>
 </div>
 {/block}
