--- a/application/index/view/common/base.html
+++ b/application/index/view/common/base.html
@@ -120,7 +120,7 @@
 </div>
 <footer>
   <div class="mdui-container">
-    Copyright &copy; 2018 Wisp X. All rights reserved. 请勿上传违反中国大陆和香港法律的图片，违者后果自负。
+    Copyright &copy; 2018 <a href="https://www.wispx.cn">Wisp X</a>. All rights reserved. 请勿上传违反中国大陆和香港法律的图片，违者后果自负。
   </div>
 </footer>
 {/block}
