--- a/application/index/view/common/base.html
+++ b/application/index/view/common/base.html
@@ -10,7 +10,7 @@
   <meta name="description" content="{$config.site_description}"/>
   <title>{block name="title"}Lsky Pro{/block}</title>
   {block name="css"}{/block}
-  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="shortcut icon" href="/favicon.ico">
   <link rel="stylesheet" href="/static/app/iconfont/iconfont.css">
   <link rel="stylesheet" href="/static/mdui/0.4.1/css/mdui.min.css">
   <link rel="stylesheet" href="/static/app/css/app.css">
