--- a/application/index/view/admin/update/index.html
+++ b/application/index/view/admin/update/index.html
@@ -67,6 +67,8 @@
           }, {
             confirmText: '确定'
           })
+        } else {
+          app.msg(false, response.msg);
         }
       },
       error: function () {
