--- a/public/static/app/css/app.less
+++ b/public/static/app/css/app.less
@@ -265,7 +265,7 @@ main {
 // 重写fileinput插件样式
 .file-input {
   @box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.13);
-  @form-control-padding: 7px 12px;
+  @form-control-padding: 10px 18px;
   .file-preview {
     border-radius: 0;
     border: none;
@@ -291,6 +291,7 @@ main {
       box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.13);
       border: none;
       border-radius: 0;
+      height: 40px;
       padding: @form-control-padding;
       &:focus {
         z-index: 0;
