--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -50,7 +50,12 @@
 <script src="/static/bootstrap-fileinput/4.5.1/js/locales/zh.js"></script>
 <script src="/static/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script>
-  var clipboard = new ClipboardJS('.copy');
+
+  var clipboard = new ClipboardJS('.copy', {
+    text: function(trigger) {
+      return $(trigger).parent('li').text();
+    }
+  });
 
   clipboard.on('success', function(e) {
     app.msg(true, '复制成功');
@@ -75,11 +80,11 @@
   }).on("fileuploaded", function(event, data, previewId, index) {
     var form = data.form, files = data.files, extra = data.extra, response = data.response, reader = data.reader;
     if(200 === response.code) {
-      $("#code-url ul").prepend("<li>" + response.data.url + "<i data-clipboard-text=\"" + response.data.url + "\" class=\"copy iconfont icon-copy\"></i></li>");
-      $("#code-html ul").prepend("<li>&lt;img src=\"" + response.data.url + "\" alt=\"" + response.data.name + "\" title=\"" + response.data.name + "\" /&gt;<i data-clipboard-text=\"" + response.data.url + "\" class=\"copy iconfont icon-copy\"></i></li>");
-      $("#code-bbcode ul").prepend("<li>[img]" + response.data.url + "[/img]<i data-clipboard-text=\"" + response.data.url + "\" class=\"copy iconfont icon-copy\"></i></li>");
-      $("#code-markdown ul").prepend("<li>![" + response.data.name + "](" + response.data.url + ")<i data-clipboard-text=\"" + response.data.url + "\" class=\"copy iconfont icon-copy\"></i></li>");
-      $("#code-markdown-with-link ul").prepend("<li>[![" + response.data.name + "](" + response.data.url + ")](" + response.data.url + ")<i data-clipboard-text=\"" + response.data.url + "\" class=\"copy iconfont icon-copy\"></i></li>");
+      $("#code-url ul").prepend("<li>" + response.data.url + "<i class=\"copy iconfont icon-copy\"></i></li>");
+      $("#code-html ul").prepend("<li>&lt;img src=\"" + response.data.url + "\" alt=\"" + response.data.name + "\" title=\"" + response.data.name + "\" /&gt;<i class=\"copy iconfont icon-copy\"></i></li>");
+      $("#code-bbcode ul").prepend("<li>[img]" + response.data.url + "[/img]<i class=\"copy iconfont icon-copy\"></i></li>");
+      $("#code-markdown ul").prepend("<li>![" + response.data.name + "](" + response.data.url + ")<i class=\"copy iconfont icon-copy\"></i></li>");
+      $("#code-markdown-with-link ul").prepend("<li>[![" + response.data.name + "](" + response.data.url + ")](" + response.data.url + ")<i class=\"copy iconfont icon-copy\"></i></li>");
       $(".success-info").css("width", "inherit");
       if (response.data.quota && response.data.use_quota) {
         $('.quota-container progress').attr('max', response.data.quota);
