--- a/application/index/view/admin/images/index.html
+++ b/application/index/view/admin/images/index.html
@@ -49,7 +49,7 @@
           <td class="mdui-text-color-light-blue">{$value.size|format_size}</td>
           <td>{$value.mime}</td>
           <td>{$value.ip}</td>
-          <td>{$value.create_time}</td>
+          <td title="{$value.create_time}">{$value.date}</td>
           <td>
             <img class="none" data-original="{$value.url}" src="{$value.url}">
             <div class="mdui-btn-group">
