--- a/application/index/view/common/base.html
+++ b/application/index/view/common/base.html
@@ -121,7 +121,7 @@
 </div>
 <footer>
   <div class="mdui-container">
-    Copyright &copy; 2018 <a href="https://www.wispx.cn">Wisp X</a>. All rights reserved.
+    Copyright &copy; 2018 <a href="https://www.lsky.pro">Lsky Pro</a>. All rights reserved.
     {if $config.icp_number}<a href="http://www.miitbeian.gov.cn" target="_blank">{$config.icp_number}</a>.{/if}
     请勿上传违反中国大陆和香港法律的图片，违者后果自负。
   </div>
