--- a/application/index/view/admin/users/index.html
+++ b/application/index/view/admin/users/index.html
@@ -92,7 +92,7 @@
         </div>
         <div class="mdui-textfield">
           <label class="mdui-textfield-label">已使用储存容量</label>
-          <input class="mdui-textfield-input" type="text" name="quota" value="" placeholder="已使用储存容量" autocomplete="off"/>
+          <input class="mdui-textfield-input" type="text" name="use_quota" value="" placeholder="已使用储存容量" autocomplete="off"/>
         </div>
         <div class="mdui-textfield">
           <label class="mdui-textfield-label">密码</label>
