--- a/application/index/view/admin/system/index.html
+++ b/application/index/view/admin/system/index.html
@@ -12,6 +12,7 @@
         <a href="#tab-user" class="mdui-ripple">用户配置</a>
         <a href="#tab-mail" class="mdui-ripple">邮件配置</a>
         <a href="#tab-other" class="mdui-ripple">其他配置</a>
+        <a href="#tab-audit" class="mdui-ripple">图片鉴黄</a>
       </div>
       <div class="tabs mdui-col-sm-8 mdui-col-md-8">
         {foreach $configs as $key => $value}
