fix http middleware

--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -65,7 +65,7 @@
   });
 
   $("#image").fileinput({
-    uploadUrl: "{:url('api/upload')}",
+    uploadUrl: "{:url('upload/upload')}",
     language: "zh",
     uploadAsync: true,
     overwriteInitial: false,
