--- a/application/index/view/admin/images/index.html
+++ b/application/index/view/admin/images/index.html
@@ -48,7 +48,7 @@
           <td>{$value.pathname}</td>
           <td class="mdui-text-color-light-blue">{$value.size|format_size}</td>
           <td>{$value.mime}</td>
-          <td>{$value.ip}</td>
+          <td class="get-city" style="cursor: pointer;">{$value.ip}</td>
           <td title="{$value.create_time}">{$value.date}</td>
           <td>
             <img class="none" data-original="{$value.url}" src="{$value.url}">
@@ -129,6 +129,26 @@
       var tr = $(this).closest('tr');
       methods.delete(tr.data('id'), false, function () {
         tr.remove();
+      });
+    });
+    // 根据ip获取城市
+    $('td.get-city').click(function () {
+      app.ajax("{:url('admin/images/getIpInfo')}", {ip: $(this).text()}, function (response) {
+        if (response.code) {
+          mdui.alert(
+            '国家：' + response.data.country +
+            '<br />地区：' + response.data.area +
+            '<br />区域：' + response.data.region +
+            '<br />城市：' + response.data.city +
+            '<br />县：' + response.data.county +
+            '<br />ISP：' + response.data.isp
+            , 'IP：' + response.data.ip
+          );
+        } else {
+          mdui.snackbar({
+            message: response.msg
+          });
+        }
       });
     });
   })
