--- a/application/index/view/index/api.html
+++ b/application/index/view/index/api.html
@@ -5,96 +5,227 @@
 {block name="main"}
 <div class="mdui-container">
   <main>
-    <h2>1. 获取Token</h2>
-    <div class="mdui-row">
-      <div class="mdui-col-md-6">
-        <div class="mdui-table-fluid mdui-m-t-1">
-          <table class="mdui-table">
-            <thead>
-            <tr>
-              <td>功能</td>
-              <td>接口</td>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-              <td>请求方式</td>
-              <td>POST</td>
-            </tr>
-            <tr>
-              <td>URL</td>
-              <td>{$domain}/api/token</td>
-            </tr>
-            </tbody>
-          </table>
+    <div class="mdui-m-b-2">
+      <h2>1. 获取Token</h2>
+      <div class="mdui-row">
+        <div class="mdui-col-md-6">
+          <div class="mdui-table-fluid mdui-m-t-1">
+            <table class="mdui-table">
+              <thead>
+              <tr>
+                <td>功能</td>
+                <td>接口</td>
+              </tr>
+              </thead>
+              <tbody>
+              <tr>
+                <td>请求方式</td>
+                <td>POST</td>
+              </tr>
+              <tr>
+                <td>URL</td>
+                <td>{$domain}/api/token</td>
+              </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
+      <h4 class="mdui-m-t-2 mdui-m-b-1">请求参数</h4>
+      <div class="mdui-table-fluid">
+        <table class="mdui-table">
+          <thead>
+          <tr>
+            <td>参数名称</td>
+            <td>类型</td>
+            <td>是否必须</td>
+            <td>说明</td>
+          </tr>
+          </thead>
+          <tbody>
+          <tr>
+            <td>email</td>
+            <td>String</td>
+            <td>是</td>
+            <td>邮箱</td>
+          </tr>
+          <tr>
+            <td>password</td>
+            <td>String</td>
+            <td>是</td>
+            <td>账号密码</td>
+          </tr>
+          <tr>
+            <td>format</td>
+            <td>String</td>
+            <td>否</td>
+            <td>返回数据格式，可选json、xml、jsonp，默认json</td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+      <h4 class="mdui-m-t-2 mdui-m-b-1">返回数据说明</h4>
+      <div class="mdui-table-fluid">
+        <table class="mdui-table">
+          <thead>
+          <tr>
+            <td>参数名称</td>
+            <td>类型</td>
+            <td>实例值</td>
+            <td>说明</td>
+          </tr>
+          </thead>
+          <tbody>
+          <tr>
+            <td>code</td>
+            <td>Number</td>
+            <td>200</td>
+            <td>状态码，成功返回200，失败返回500</td>
+          </tr>
+          <tr>
+            <td>msg</td>
+            <td>String</td>
+            <td>success</td>
+            <td>提示信息</td>
+          </tr>
+          <tr>
+            <td>time</td>
+            <td>Number</td>
+            <td>1544176295</td>
+            <td>响应时间戳</td>
+          </tr>
+          <tr>
+            <td>data</td>
+            <td>array|object</td>
+            <td>{"token": "8961576c9090ef0902c4b89406f8d557"}</td>
+            <td>获取的token数据</td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
-    <h4 class="mdui-m-t-2 mdui-m-b-1">请求参数</h4>
-    <div class="mdui-table-fluid">
-      <table class="mdui-table">
-        <thead>
-        <tr>
-          <td>参数名称</td>
-          <td>类型</td>
-          <td>是否必须</td>
-          <td>说明</td>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-          <td>email</td>
-          <td>String</td>
-          <td>是</td>
-          <td>邮箱</td>
-        </tr>
-        <tr>
-          <td>password</td>
-          <td>String</td>
-          <td>是</td>
-          <td>账号密码</td>
-        </tr>
-        </tbody>
-      </table>
-    </div>
-    <h4 class="mdui-m-t-2 mdui-m-b-1">返回数据说明</h4>
-    <div class="mdui-table-fluid">
-      <table class="mdui-table">
-        <thead>
-        <tr>
-          <td>参数名称</td>
-          <td>类型</td>
-          <td>实例值</td>
-          <td>说明</td>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-          <td>code</td>
-          <td>Number</td>
-          <td>200</td>
-          <td>状态码，成功返回200，失败返回500</td>
-        </tr>
-        <tr>
-          <td>msg</td>
-          <td>String</td>
-          <td>success</td>
-          <td>提示信息</td>
-        </tr>
-        <tr>
-          <td>time</td>
-          <td>Number</td>
-          <td>1544176295</td>
-          <td>响应时间戳</td>
-        </tr>
-        <tr>
-          <td>data</td>
-          <td>array|object</td>
-          <td>{"token": "8961576c9090ef0902c4b89406f8d557"}</td>
-          <td>获取的token数据</td>
-        </tr>
-        </tbody>
-      </table>
+
+    <div class="mdui-m-b-2">
+      <h2>2. 图片上传</h2>
+      <div class="mdui-row">
+        <div class="mdui-col-md-6">
+          <div class="mdui-table-fluid mdui-m-t-1">
+            <table class="mdui-table">
+              <thead>
+              <tr>
+                <td>功能</td>
+                <td>接口</td>
+              </tr>
+              </thead>
+              <tbody>
+              <tr>
+                <td>请求方式</td>
+                <td>POST</td>
+              </tr>
+              <tr>
+                <td>URL</td>
+                <td>{$domain}/api/upload</td>
+              </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+      <h4 class="mdui-m-t-2 mdui-m-b-1">请求参数</h4>
+      <div class="mdui-table-fluid">
+        <table class="mdui-table">
+          <thead>
+          <tr>
+            <td>参数名称</td>
+            <td>类型</td>
+            <td>是否必须</td>
+            <td>说明</td>
+          </tr>
+          </thead>
+          <tbody>
+          <tr>
+            <td>image</td>
+            <td>File</td>
+            <td>是</td>
+            <td>表单名称</td>
+          </tr>
+          <tr>
+            <td>format</td>
+            <td>String</td>
+            <td>否</td>
+            <td>返回数据格式，可选json、xml、jsonp，默认json</td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="mdui-shadow-2 mdui-m-t-2 mdui-m-b-1 mdui-p-a-3 mdui-text-color-red">
+        注意：请求时header如果有参数 token，接口则认证该token，上传的图片也是在该token用户下，否则为游客上传。
+      </div>
+      <h4 class="mdui-m-t-2 mdui-m-b-1">返回数据说明</h4>
+      <div class="mdui-table-fluid">
+        <table class="mdui-table">
+          <thead>
+          <tr>
+            <td>参数名称</td>
+            <td>类型</td>
+            <td>实例值</td>
+            <td>说明</td>
+          </tr>
+          </thead>
+          <tbody>
+          <tr>
+            <td>code</td>
+            <td>Number</td>
+            <td>200</td>
+            <td>状态码，成功返回200，失败返回500</td>
+          </tr>
+          <tr>
+            <td>msg</td>
+            <td>String</td>
+            <td>success</td>
+            <td>提示信息</td>
+          </tr>
+          <tr>
+            <td>time</td>
+            <td>Number</td>
+            <td>1544176295</td>
+            <td>响应时间戳</td>
+          </tr>
+          <tr>
+            <td>data</td>
+            <td>array|object</td>
+            <td>
+<pre>{
+  "name": "9B7BCFBD05891B2D42187F126887777A.jpg",
+  "url": "http://域名/2018/12/08/5c0b519f44701.jpg"
+}</pre>
+            </td>
+            <td>获取的token数据</td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+      <h4 class="mdui-m-t-2 mdui-m-b-1">上传示例</h4>
+      <pre class="mdui-shadow-2 mdui-p-a-3">
+POST /api/upload HTTP/1.1
+Host: {$domain}
+
+Connection: keep-alive
+Content-Length: 57398
+Content-Type: multipart/form-data; boundary=----WebKitFormBoundaryx2mqINKHVPJ8yMdK
+
+------WebKitFormBoundaryx2mqINKHVPJ8yMdK
+Content-Disposition: form-data; name="image"; filename="test.png"
+Content-Type: image/png
+</pre>
+      <h4 class="mdui-m-t-2 mdui-m-b-1">响应错误示例</h4>
+      <pre class="mdui-shadow-2 mdui-p-a-3">
+{
+  "code": 500,
+  "msg": "管理员关闭了游客上传！",
+  "data": null,
+  "time": 1544245931
+}</pre>
     </div>
   </main>
 </div>
