增加文件夹分类功能，待完善.

--- a/application/index/view/common/base.html
+++ b/application/index/view/common/base.html
@@ -13,7 +13,7 @@
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="stylesheet" href="/static/app/iconfont/iconfont.css">
   <link rel="stylesheet" href="/static/mdui/0.4.1/css/mdui.min.css">
-  <link rel="stylesheet" href="/static/app/css/app.css">
+  <link rel="stylesheet" href="/static/app/css/app.css?v=1.0">
   <!--[if IE]>
   <script>window.location.href = '/compatibility.html';</script>
   <![endif]-->
@@ -139,7 +139,7 @@
 <script src="/static/jquery/3.3.1/jquery.min.js"></script>
 <script src="/static/mdui/0.4.1/js/mdui.min.js"></script>
 <script src="/static/marked/0.5.1/marked.js"></script>
-<script src="/static/app/js/app.js"></script>
+<script src="/static/app/js/app.js?v=1.0"></script>
 {block name="js"}{/block}
 <script>
   var thatVer = '{$config.system_version}';
