--- a/application/index/view/user/images.html
+++ b/application/index/view/user/images.html
@@ -3,8 +3,8 @@
 {block name="title"}图片管理 - {$config.site_name}{/block}
 
 {block name="css"}
-  <link rel="stylesheet" href="/static/contextjs/css/context.standalone.css">
-  <link rel="stylesheet" href="/static/jquery-viewer/1.2.0/css/viewer.css">
+<link rel="stylesheet" href="/static/contextjs/css/context.standalone.css">
+<link rel="stylesheet" href="/static/jquery-viewer/1.2.0/css/viewer.css">
 {/block}
 
 {block name="main"}
@@ -30,9 +30,15 @@
         </form>
         <div class="mdui-clearfix"></div>
       </div>
+      <ul class="breadcrumb">
+        <li class="active"><a data-id="0">Home</a></li>
+      </ul>
       <div class="mdui-divider mdui-m-b-1"></div>
       <div class="mdui-row">
-        <div id="images-box" class="images-box mdui-row-xs-3 mdui-row-sm-9 mdui-row-md-9 mdui-row-lg-10 mdui-col-xl-12"></div>
+        <div class="box mdui-row-xs-3 mdui-row-sm-9 mdui-row-md-9 mdui-row-lg-10 mdui-col-xl-12">
+          <div class="folders-box"></div>
+          <div class="images-box"></div>
+        </div>
       </div>
       <button class="mdui-btn mdui-ripple mdui-center mdui-color-grey-300 mdui-text-color-black-secondary mdui-m-t-2 more"></button>
       <!-- Info Dialog -->
@@ -97,31 +103,47 @@
 <script>
   $(function () {
 
-    var params = {}, viewer, imagesBox = $('.images-box'), totalBox = $('small.num'), infoDialog = $(".mdui-dialog#info"), qrcodeApi = 'https://www.kuaizhan.com/common/encode-png?large=true&data=';
+    var params = {}, viewer, foldersBox = $('.folders-box'), imagesBox = $('.images-box'), totalBox = $('small.num'), infoDialog = $(".mdui-dialog#info"), qrcodeApi = 'https://www.kuaizhan.com/common/encode-png?large=true&data=';
     params.page = 1;
 
     // 函数库
     var methods = {
-      getImages: function () {
+      getData: function (options) {
+        params = options || params;
         var more = $(".more");
         more.attr('disabled', true).text('加载中...');
         app.ajax("{:url('user/images')}", params, function (response) {
           if (response.code) {
-            var list = response.data.data;
-            totalBox.text(response.data.total);
-            if (list.length) {
-              for (var i = 0; i < list.length; i++) {
+            var images = response.data.images.data;
+            var folders = response.data.folders;
+            totalBox.text(response.data.images.total);
+            if (folders.length) {
+              for (var f = 0; f < folders.length; f++) {
+                foldersBox.append(
+                  ' <div class="mdui-col">' +
+                  '   <div class="item" data-id="' + folders[f].id + '" data-parent-id="' + folders[f].parent_id + '" data-name="' + folders[f].name + '">' +
+                  '     <div class="info">' +
+                  '       <img src="/static/app/images/folder.svg">' +
+                  '     </div>' +
+                  '   <p class="name">' + folders[f].name + '</p>' +
+                  '   </div>' +
+                  '</div>'
+                );
+              }
+            }
+            if (images.length) {
+              for (var i = 0; i < images.length; i++) {
                 imagesBox.append(
                   '<div class="mdui-col">' +
-                  '        <div data-id="' + list[i].id + '" data-json=\'' + JSON.stringify(list[i]) + '\' class="item" title=' + list[i].name + '>' +
-                  '         <i class="choice iconfont icon-choice"></i>' +
-                  '         <i class="info iconfont icon-info"></i>' +
-                  '          <div class="info image">' +
-                  '            <img data-original="' + list[i].url + '" src="' + list[i].url + '">' +
-                  '          </div>' +
-                  '          <p class="name">' + list[i].name + '</p>' +
-                  '        </div>' +
-                  '      </div>');
+                  '  <div class="item" data-id="' + images[i].id + '" data-json=\'' + JSON.stringify(images[i]) + '\' title=' + images[i].name + '>' +
+                  '    <i class="choice iconfont icon-choice"></i>' +
+                  '    <i class="info iconfont icon-info"></i>' +
+                  '      <div class="info image">' +
+                  '        <img data-original="' + images[i].url + '" src="' + images[i].url + '">' +
+                  '      </div>' +
+                  '    <p class="name">' + images[i].name + '</p>' +
+                  '  </div>' +
+                  '</div>');
               }
 
               // 图片预览插件
@@ -134,16 +156,21 @@
                 viewer.data('viewer').update();
               }
 
-              if (response.data.current_page == response.data.last_page) {
+              if (response.data.images.current_page == response.data.images.last_page) {
                 return more.attr('disabled', true).text('我也是有底线的~');
               }
               params.page++;
               return more.attr('disabled', false).text('加载更多');
             } else {
-              more.attr('disabled', true).text('暂无数据');
+              more.attr('disabled', true).text('暂无图片');
             }
           }
         });
+      },
+      resetData: function (options) {
+        foldersBox.html('');
+        imagesBox.html('');
+        methods.getData(options);
       },
       // 删除
       delete: function (id, batch, callback) {
@@ -161,7 +188,7 @@
       }
     };
 
-    methods.getImages();
+    methods.getData();
 
     // 监听复制操作
     var clipboard = new ClipboardJS('.copy-url');
@@ -179,50 +206,149 @@
     // Context Start
     context.init({
       fadeSpeed: 100,
-      filter: function ($obj){},
+      filter: function ($obj) {},
       above: 'auto',
       preventDoubleContext: true,
       compress: false
     });
 
-    $('body').on('contextmenu', '.images-box .item', function(e) {
-      var item = $(e.target).closest('.item'), data = item.data('json');
-      context.attach('.images-box .item', [
-        {header: 'Compressed Menu'},
-        {text: '查看图片', action: function (e) {
+    // 右键操作
+    $('.images-container').on('contextmenu', '.box', function(e) {
+      var $that = $(e.target), $item = $that.closest('.item');
+      if ($that.parents().hasClass('folders-box')) {
+        context.attach('.folders-box .item', [
+          {header: 'Compressed Menu'},
+          {text: '打开', action: function (e) {
+              $item.click();
+            }
+          },
+          {text: '重新命名', action: function (e) {
             e.preventDefault();
-            item.find('img').click();
+              mdui.prompt('请输入文件夹名称',
+                function (value) {
+                  app.ajax("{:url('user/renameFolder')}", {
+                    id: $item.data('id'),
+                    parent_id: $item.data('parent-id'),
+                    name: value
+                  }, function (response) {
+                    if (response.code) {
+                      $item.attr('data-name', value).find('p.name').text(value);
+                      return app.msg(true, response.msg);
+                    }
+                    mdui.alert(response.msg);
+                  })
+                }
+              );
+            }
+          },
+          {divider: true},
+          {text: '删除', action: function (e) {
+              e.preventDefault();
+              mdui.confirm('确认删除该文件夹吗？', function() {
+                app.ajax("{:url('user/deleteFolder')}", {id: $item.data('id')}, function (response) {
+                  if (response.code) {
+                    $item.parent().remove();
+                    return app.msg(true, response.msg);
+                  }
+                  mdui.alert(response.msg);
+                })
+              });
+            }
+          },
+        ]);
+      } else if ($that.parents().hasClass('images-box')) {
+        var $item = $that.closest('.item'), data = $item.data('json');
+        context.attach('.images-box .item', [
+          {header: 'Compressed Menu'},
+          {text: '查看图片', action: function (e) {
+              e.preventDefault();
+              $item.find('img').click();
+            }
+          },
+          {text: '新窗口打开图片', href: data.url, target: '_blank'},
+          {divider: true},
+          {text: '复制链接', action: function (e) {
+              e.preventDefault();
+              $('#copy-url').attr('data-clipboard-text', data.url).click();
+            }
+          },
+          {
+            text: '删除', action: function (e) {
+              e.preventDefault();
+              methods.delete(data.id, false, function () {
+                $item.parent().remove();
+                totalBox.text(parseInt(totalBox.text()) - 1);
+              })
+            }
+          },
+          {
+            text: '属性', action: function (e) {
+              e.preventDefault();
+              $item.find('i.info').click();
+            }
           }
-        },
-        {text: '新窗口打开图片', href: data.url, target: '_blank'},
-        {divider: true},
-        {text: '复制链接', action: function (e) {
+        ]);
+      } else {
+        context.attach('.box', [
+          {header: 'Compressed Menu'},
+          {text: '新建文件夹', action: function (e) {
             e.preventDefault();
-            $('#copy-url').attr('data-clipboard-text', data.url).click();
-          }
-        },
-        {
-          text: '删除', action: function (e) {
-            e.preventDefault();
-            methods.delete(data.id, false, function () {
-              item.parent().remove();
-              totalBox.text(parseInt(totalBox.text()) - 1);
-            })
-          }
-        },
-        {
-          text: '属性', action: function (e) {
-            e.preventDefault();
-            item.find('i.info').click();
-          }
-        }
-      ]);
+              mdui.prompt('请输入文件夹名称',
+                function (value) {
+                  app.ajax("{:url('user/createFolder')}", {
+                    parent_id: $('ul.breadcrumb li.active:last-child a').data('id'),
+                    name: value
+                  }, function (response) {
+                    if (response.code) {
+                      methods.resetData();
+                      return app.msg(true, response.msg);
+                    }
+                    mdui.alert(response.msg);
+                  })
+                }
+              );
+            }
+          },
+          {divider: true},
+          {text: '刷新', action: function (e) {
+              // e.preventDefault();
+              methods.resetData();
+            }
+          },
+        ]);
+      }
     });
+
+    // 文件夹点击操作
+    $('.folders-box').on('click', '', function (e) {
+      var $that = $(e.target), $item = $that.closest('.item');
+      $('ul.breadcrumb li:last-child').removeClass('active');
+      $('ul.breadcrumb').append(
+        '<li class="active">' +
+        '  <a data-id="' + $item.data('id') + '">' + $item.data('name') + '</a>' +
+        '</li>'
+      );
+      methods.resetData({
+        page: 1,
+        folderId: $item.data('id')
+      });
+    });
+
+    // 面包屑导航点击
+    $('ul.breadcrumb').on('click', 'li:not(.active) a', function (e) {
+      e.preventDefault();
+      methods.resetData({
+        page: 1,
+        folderId: $(this).data('id')
+      });
+      $(this).parent('li').addClass('active').nextAll().remove();
+    });
+
     // Context End
 
     // 加载更多
     $('.more').click(function () {
-      methods.getImages();
+      methods.getData();
     });
 
     // 筛选
@@ -231,7 +357,7 @@
       // 清空内容
       imagesBox.html('');
       params.keyword = $(this).find("input[name='keyword']").val();
-      methods.getImages();
+      methods.getData();
     });
 
     // 选中项操作
@@ -247,7 +373,7 @@
             methods.delete(array, true, function () {
               selected.remove();
               totalBox.text(parseInt(totalBox.text()) - selected.length);
-              // methods.getImages();
+              // methods.getData();
             });
           }
         } else {
@@ -332,11 +458,7 @@
 
     // 重置数据
     $('#reset').click(function () {
-      params = {
-        page: 1
-      };
-      imagesBox.html('');
-      methods.getImages();
+      methods.resetData();
     });
   })
 </script>
