改进细节样式

--- a/application/index/view/admin/images/index.html
+++ b/application/index/view/admin/images/index.html
@@ -53,7 +53,7 @@
           <td>
             <img class="none" data-original="{$value.url}" src="{$value.url}">
             <div class="mdui-btn-group">
-              <button class="mdui-btn mdui-btn-raised mdui-ripple mdui-btn-dense see" data-key="{$key}">查看图片</button>
+              <button class="mdui-btn mdui-btn-raised mdui-ripple mdui-btn-dense see" data-key="{$key}">查看</button>
               <button class="mdui-btn mdui-btn-raised mdui-ripple mdui-color-red mdui-btn-dense del">删除</button>
             </div>
           </td>
